# cargs

./: .clang-format  .clang-tidy  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Justfile  Makefile  README.md  meson.build  meson_options.txt  mkdocs.yml  update_version.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  build.yml  ci-complete.yml  ci.yml  code-quality.yml  codeql.yml  examples.yml  pr-issue-check.yml  release.yml  test.yml
benchmarks/: benchmark_release_mode.c  meson.build
cargs/includes/: cargs.h
cargs/includes/cargs/: api.h  errors.h  macros.h  parsing.h  types.h  utils.h
cargs/includes/cargs/callbacks/: handlers.h  validators.h
cargs/sources/: errors.c  meson.build
cargs/sources/api/: cargs_free.c  cargs_get_value.c  cargs_init.c  cargs_is_set.c  cargs_parse.c  meson.build
cargs/sources/api/debug/: meson.build  print_options.c
cargs/sources/callbacks/: meson.build
cargs/sources/callbacks/handlers/: bool_handler.c  help_handler.c  int_handler.c  meson.build  string_handler.c  version_handler.c
cargs/sources/callbacks/validators/: meson.build  range_validator.c
cargs/sources/init/: meson.build  validate_group.c  validate_option.c  validate_positional.c  validate_structure.c  validate_subcommand.c
cargs/sources/parsing/: execute_callbacks.c  handle_long_option.c  handle_positional.c  handle_short_option.c  handle_subcommand.c  meson.build  parse_utils.c  validate_dependencies.c
cargs/sources/utils/: choices_to_value.c  cmp_value.c  context.c  find_option.c  free_option_value.c  meson.build  parsing.c  start_with.c  subcommand_stack.c
docs/: contributing.md  index.md  requirements.txt
docs/advanced/: custom-validators.md  regex.md
docs/api/: functions.md  macros.md  overview.md  types.md
docs/assets/: llm-references.md
docs/en/: index.md
docs/en/advanced/: custom-handlers.md  custom-validators.md  multi-values.md  nested-commands.md  regex.md
docs/en/api/: functions.md  macros.md  overview.md  regex_patterns.md  types.md
docs/en/guide/: basic-options.md  environment.md  installation.md  multi-values.md  option-formats.md  quickstart.md  subcommands.md  validation.md
docs/examples/: basic.md
docs/fr/: contributing.md  index.md  license.md
docs/fr/advanced/: custom-handlers.md  custom-validators.md  multi-values.md  nested-commands.md  regex.md
docs/fr/api/: functions.md  macros.md  overview.md  regex_patterns.md  types.md
docs/fr/examples/: basic.md
docs/fr/guide/: basic-options.md  environment.md  installation.md  multi-values.md  option-formats.md  quickstart.md  subcommands.md  validation.md
docs/guide/: basic-options.md  installation.md  quickstart.md  subcommands.md  validation.md
examples/: advanced_options.c  basic_usage.c  custom_handlers.c  env_vars.c  meson.build  multi_values.c  nested_commands.c  positional_args.c  regex.c  subcommands.c  validators.c
exemples/: basic_usage.c
includes/: cargs.h
includes/cargs/: api.h  callbacks.h  errors.h  macros.h  options.h  parsing.h  regex.h  types.h  utils.h
includes/cargs/api/: debug.h
includes/cargs/callbacks/: handlers.h
includes/cargs/internal/: compiler.h  context.h  debug.h  display.h  parsing.h  utils.h
includes/cargs/internal/callbacks/: handlers.h  validators.h
packaging/conan/: conandata.yml  conanfile.py
packaging/conan/test_package/: conanfile.py  test_package.c
packaging/installers/: install.sh
packaging/vcpkg/: libcargs.json  lucocozz-cargs.json  portfile.cmake  vcpkg.json
source/: meson.build
source/api/: cargs_display.c  cargs_exec.c  cargs_free.c  cargs_init.c  cargs_parse.c  cargs_value_access.c  meson.build
source/callbacks/: meson.build
source/callbacks/handlers/: array_float_handler.c  array_int_handler.c  array_string_handler.c  bool_handler.c  default_free.c  flag_handler.c  float_handler.c  help_handler.c  int_handler.c  map_bool_handler.c  map_float_handler.c  map_int_handler.c  map_string_handler.c  meson.build  string_handler.c  version_handler.c
source/callbacks/validators/: count_validator.c  length_validator.c  meson.build  range_validator.c  regex_validator.c
source/core/: context.c  error.c  meson.build
source/core/parsing/: execute_callbacks.c  load_env_vars.c  meson.build  option_handle_long.c  option_handle_positional.c  option_handle_short.c  option_handle_subcommand.c  parse_args.c  post_parse_validation.c  validate_dependencies.c
source/core/validation/: meson.build  validate_arguments.c  validate_containers.c  validate_structure.c
source/debug/: meson.build  print_options.c
source/display/: help_display.c  meson.build  usage_display.c  version_display.c
source/utils/: meson.build  multi_values.c  option_lookup.c  starts_with.c  strings.c  value_utils.c
tests/: meson.build  test.c
tests/fonctionnel/: meson.build  test_api.c  test_basic_usage.c  test_env.c  test_multi_values.c
tests/integration/: meson.build  test_edge_case.c  test_option_parsing.c  test_parsing.c  test_positional_edge_case.c  test_post_validation.c  test_subcommand_edge_case.c  test_subcommands.c  test_validation.c  test_validators.c
tests/unit/: meson.build  test_robustness.c
tests/unit/test_callbacks/: test_handlers.c  test_validators.c
tests/unit/test_core/: test_context.c  test_error.c  test_release_mode.c
tests/unit/test_utils/: test_multi_values.c  test_option_lookup.c  test_strings.c  test_value_utils.c
tools/: version.py  version_core.py
