option('tests', type: 'boolean', value: false, description: 'Enable tests')
option('examples', type: 'boolean', value: false, description: 'Build example programs')
option('benchmarks', type: 'boolean', value: false, description: 'Build benchmark programs')
option('release_mode', type: 'boolean', value: false, 
       description: 'Enable release mode (skips validation for better performance)')
