option('tests', type: 'boolean', value: false, description: 'Enable tests')
option('examples', type: 'boolean', value: false, description: 'Build example programs')
option('benchmarks', type: 'boolean', value: false, description: 'Build benchmark programs')
option('disable_regex', type: 'boolean', value: false, description: 'Disable regex support (removes PCRE2 dependency)')
