# Compile all subdirectories to collect sources
subdir('utils')
subdir('callbacks')
subdir('api')
subdir('core')
subdir('debug')
subdir('display')

# Collect all sources
cargs_sources = []
cargs_sources += utils_sources
cargs_sources += callbacks_sources
cargs_sources += api_sources
cargs_sources += core_sources
cargs_sources += debug_sources
cargs_sources += display_sources
