subdir('utils')
subdir('callbacks')
subdir('api')
subdir('init')
subdir('parsing')

cargs_sources = files([
	'errors.c',
])

cargs_sources += cargs_utils_sources
cargs_sources += cargs_callbacks_sources
cargs_sources += cargs_api_sources
cargs_sources += cargs_init_sources
cargs_sources += cargs_parsing_sources
