handlers_sources = files([
	'help_handler.c',
	'version_handler.c',
	'bool_handler.c',
	'string_handler.c',
	'int_handler.c',
	'float_handler.c',
	'array_string_handler.c',
	'array_int_handler.c',
	'array_float_handler.c',
	'map_string_handler.c',
	'map_int_handler.c',
	'map_float_handler.c',
	'map_bool_handler.c',
	'default_free.c'
])
